replace broken download link

--- a/ssrspeed_config.example.json
+++ b/ssrspeed_config.example.json
@@ -125,8 +125,8 @@
 		],
 		"downloadLinks": [
 			{
-				"link": "https://download.microsoft.com/download/0/A/F/0AFB5316-3062-494A-AB78-7FB0D4461357/7601.17514.101119-1850_Update_Sp_Wave1-GRMSP1.1_DVD.iso",
-				"fileSize": 1900,
+				"link": "https://download.microsoft.com/download/E/7/D/E7D9744A-06A6-46FB-AEA4-50FAAEC6CE73/windowsphone81sdkupdate1.iso",
+				"fileSize": 940,
 				"tag": "Default"
 			},
 			{
